fix: use escaped product name